--- a/webowe/podsumowanie/podsumowanie.cbp
+++ b/webowe/podsumowanie/podsumowanie.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="pies" />
+		<Option title="podsumowanie" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/pies" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/podsumowanie" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/pies" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/podsumowanie" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,7 +31,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="dog.cpp" />
+		<Unit filename="zad.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
